added landing product

--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Evoush Github Pages</title>
-  </head>
-  
-  <body>
-    
-    <h1>Evoush Official Github Pages</h1>
-    <p>Your Eternal Future</p>
-    
-  </body>
+<html>
+<head>
+	<title>Evoush Product Landing</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+<body>
+
+
+<section>
+	<div class="circle"></div>
+	<header>
+		<a href="">
+			<img src="https://raw.githubusercontent.com/evoush122/Evoush-Official-Website/master/static/icon_192.png" class="logo">
+		</a>
+		<ul>
+			<li><a href="">Home</a></li>
+			<li><a href="">What's New</a></li>
+		</ul>
+	</header>
+
+	<div class="content">
+		<div class="textBox">
+			<h2>Evoush <span>Starter Product </span></h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+			<a href="#">Learn More</a>
+
+		</div>
+
+		<div class="imgBox">
+			<img src="assets/img/products/evost_box.png" class="starbucks"/>
+		</div>
+	</div>
+
+	<ul class="thumb">
+		<li>
+			<img src="assets/img/products/sachet.png" onclick="imgSlider('assets/img/products/evost_box.png')">
+		</li>
+		<li>
+			<img src="assets/img/products/kileon.png" onclick="imgSlider('assets/img/products/kileon_box.png')">
+		</li>
+		<li>
+			<img src="assets/img/thumb3.png" onclick="imgSlider('assets/img/img3.png')">
+		</li>
+	</ul>
+
+	<ul class="sci">
+		<li>
+			<a href="#">
+				<img src="assets/img/facebook.png">
+			</a>
+		</li>
+		<li>
+			<a href="#">
+				<img src="assets/img/twitter.png">
+			</a>
+		</li>
+		<li>
+			<a href="#">
+				<img src="assets/img/instagram.png">
+			</a>
+		</li>
+	</ul>
+
+</section>
+
+
+<script type="text/javascript" src="assets/js/script.js"></script>
+</body>
 </html>
