--- a/index.html
+++ b/index.html
@@ -3,6 +3,29 @@
 <head>
 	<title>Evoush Product Landing</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<!-- CSRF Token -->
+	<link rel="canonical" href="https://evoush.com" />
+	<meta name="description" content="Sukses berbisnis network marketing">
+	<meta name="keywords" content="evoush landing product">
+	<meta name="author" content="evoush official">
+	<meta property="og:url" content="https://evoush.com)">
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="Evoush::Official" />
+	<meta property="og:title" content="Your Eternal future">
+	<meta property="og:description" content="Sukses berbisnis network marketing di era pandemi">
+	<meta property="og:image" content="https://evoush.com/_nuxt/img/3.a876805.jpg">
+	<meta property="og:image:width" content="600" />
+	<meta property="og:image:height" content="598" />
+	<meta property="og:type"          content="website" />
+	<meta property="og:title"         content="Evoush::Official" />
+	<meta property="og:description"   content="Your Eternal Future" />
+
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/codesyariah122/bahan-evoush/main/images/logo/fav_evoush.png">
+	<script data-ad-client="ca-pub-8390872078103831" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 
