--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			<img src="https://raw.githubusercontent.com/evoush122/Evoush-Official-Website/master/static/icon_192.png" class="logo">
 		</a>
 		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="">What's New</a></li>
+			<li><a href="#">Home</a></li>
+			<li><a href="https://evoush.com/">What's New</a></li>
 		</ul>
 	</header>
 
@@ -64,13 +64,13 @@
 
 	<ul class="thumb">
 		<li>
-			<img src="assets/img/products/sachet.png" onclick="imgSlider('assets/img/products/evost_box.png')">
+			<img src="assets/img/products/sachet.png" onclick="imgSlider('assets/img/products/evost_box.png', '#ac0b4f')">
 		</li>
 		<li>
-			<img src="assets/img/products/kileon.png" onclick="imgSlider('assets/img/products/kileon_box.png')">
+			<img src="assets/img/products/kileon.png" onclick="imgSlider('assets/img/products/kileon_box.png', '#ee5316')">
 		</li>
 		<li>
-			<img src="assets/img/thumb3.png" onclick="imgSlider('assets/img/img3.png')">
+			<img src="assets/img/products/eikana.png" onclick="imgSlider('assets/img/products/eikana_box.png', '#80944c')">
 		</li>
 	</ul>
 
