--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 		<a href="">
 			<img src="https://raw.githubusercontent.com/evoush122/Evoush-Official-Website/master/static/icon_192.png" class="logo">
 		</a>
-		<ul>
+		<div class="toggle" onclick="toggleMenu()"></div>
+		<ul class="navigation">
 			<li><a href="#">Home</a></li>
 			<li><a href="https://evoush.com/">What's New</a></li>
 		</ul>
@@ -44,7 +45,7 @@
 
 	<div class="content">
 		<div class="textBox">
-			<h2>Evoush <span>Starter Product </span></h2>
+			<h2>Evoush <span>Healthy Product </span></h2>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -64,13 +65,13 @@
 
 	<ul class="thumb">
 		<li>
-			<img src="assets/img/products/sachet.png" onclick="imgSlider('assets/img/products/evost_box.png', '#ac0b4f')">
+			<img src="assets/img/products/sachet.png" onclick="imgSlider('assets/img/products/evost_box.png'); changeCircleColor('#ac0b4f')">
 		</li>
 		<li>
-			<img src="assets/img/products/kileon.png" onclick="imgSlider('assets/img/products/kileon_box.png', '#ee5316')">
+			<img src="assets/img/products/kileon.png" onclick="imgSlider('assets/img/products/kileon_box.png'); changeCircleColor('#ee5316')">
 		</li>
 		<li>
-			<img src="assets/img/products/eikana.png" onclick="imgSlider('assets/img/products/eikana_box.png', '#80944c')">
+			<img src="assets/img/products/eikana.png" onclick="imgSlider('assets/img/products/eikana_box.png'); changeCircleColor('#F39682')">
 		</li>
 	</ul>
 
