--- a/index.html
+++ b/index.html
@@ -1,134 +1,107 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Evoush Product Landing</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <head>
+    <title>Evoush Product Landing</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <!-- CSRF Token -->
+    <link rel="canonical" href="https://evoush.com" />
+    <meta name="description" content="Sukses berbisnis network marketing" />
+    <meta name="keywords" content="evoush landing product" />
+    <meta name="author" content="evoush official" />
+    <meta property="og:url" content="https://evoush.com)" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Evoush::Official" />
+    <meta property="og:title" content="Your Eternal future" />
+    <meta
+      property="og:description"
+      content="Sukses berbisnis network marketing di era pandemi"
+    />
+    <meta
+      property="og:image"
+      content="https://evoush.com/_nuxt/img/3.a876805.jpg"
+    />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="598" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Evoush::Official" />
+    <meta property="og:description" content="Your Eternal Future" />
+    <script
+      data-ad-client="ca-pub-8390872078103831"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<!-- CSRF Token -->
-	<link rel="canonical" href="https://evoush.com" />
-	<meta name="description" content="Sukses berbisnis network marketing">
-	<meta name="keywords" content="evoush landing product">
-	<meta name="author" content="evoush official">
-	<meta property="og:url" content="https://evoush.com)">
-	<meta property="og:type" content="website" />
-	<meta property="og:site_name" content="Evoush::Official" />
-	<meta property="og:title" content="Your Eternal future">
-	<meta property="og:description" content="Sukses berbisnis network marketing di era pandemi">
-	<meta property="og:image" content="https://evoush.com/_nuxt/img/3.a876805.jpg">
-	<meta property="og:image:width" content="600" />
-	<meta property="og:image:height" content="598" />
-	<meta property="og:type"          content="website" />
-	<meta property="og:title"         content="Evoush::Official" />
-	<meta property="og:description"   content="Your Eternal Future" />
-
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-
-	<!-- Material Kit CSS -->
-	<link href="assets/material/assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
-	<link rel="shortcut icon" href="https://raw.githubusercontent.com/codesyariah122/bahan-evoush/main/images/logo/fav_evoush.png">
-	<script data-ad-client="ca-pub-8390872078103831" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-	<style type="text/css">
-		.brand-logo img{
-			width:45px;
-			margin-top: -.7rem;
-		}
-		.brand-logo img:hover{
-			transform: translateY(45deg);
-		}
-	</style>
-</head>
-<body>
-<nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg"  color-on-scroll="100">
-  <div class="container">
-      <div class="navbar-translate">
-        <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html">
-          Material Kit </a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-
-      <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="#" class="nav-link">
-                  <i class="material-icons">apps</i> Template
-              </a>
-            </li>
-          </ul>
-      </div>
-  </div>
-</nav>
-
-
-<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg3.jpg')">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 ml-auto mr-auto">
-        <div class="brand text-center">
-          <h1>Your title here</h1>
-          <h3 class="title text-center">Subtitle</h3>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="main main-raised">
-  <div class="container">
-    <div class="section text-center">
-    	<div id="result">
-      		<h2 class="title">Your main section here</h2>
-    	</div>
-    </div>
-  </div>
-</div>
-
-<footer class="footer footer-default" >
-  <div class="container">
-    <nav class="float-left">
+    <script
+      type="text/javascript"
+      src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-609818ffd946e881"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=61606506ea6eca00151d8ce7&product=inline-reaction-buttons"
+      async="async"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+    />
+  </head>
+  <body>
+    <div class="nav">
       <ul>
         <li>
-          <a href="https://www.creative-tim.com/">
-              Creative Tim
-          </a>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <img class="logo" src="assets/img/logo/logo.png" alt="" />
+        </li>
+        <li>
+          <a href="https://evoush.com">Go To Web Page</a>
         </li>
       </ul>
-    </nav>
-    <div class="copyright float-right">
-        &copy;
-        <script>
-            document.write(new Date().getFullYear())
-        </script>, made with <i class="material-icons">favorite</i> by
-        <a href="https://www.creative-tim.com/" target="blank">Creative Tim</a> for a better web.
     </div>
-  </div>
-</footer>
 
+    <div class="hero-section">
+      <div id="first" class="row">
+        <!-- First list -->
+      </div>
 
-<script src="assets/material/assets/js/core/jquery.min.js" type="text/javascript"></script>
-<script src="assets/material/assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="assets/material/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-<script src="assets/material/assets/js/plugins/moment.min.js"></script>
-<!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-<script src="assets/material/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/material/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-<!--  Google Maps Plugin  -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-<!-- Place this tag in your head or just before your close body tag. -->
-<script async defer src="https://buttons.github.io/buttons.js"></script>
-<!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-<script src="assets/material/assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
-<script type="text/javascript" src="assets/js/NewScript.js"></script>
-</body>
+      <div id="second" class="row">
+        <!-- Second list -->
+      </div>
+
+      <div id="third" class="row">
+        <!-- Third list -->
+      </div>
+    </div>
+
+    <!-- <div class="contact">
+      <fieldset>
+        <legend>Contact</legend>
+      </fieldset>
+    </div> -->
+
+    <div class="spacer"></div>
+
+    <div class="footer">
+      <p>Contact me on evoushofficiall@gmail.com</p>
+    </div>
+
+    <!-- jQuery library -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <script type="text/javascript" src="assets/js/functions.js"></script>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
