update with loading

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Evoush::Official" />
     <meta property="og:description" content="Your Eternal Future" />
+    <link rel="shortcut icon" href="/assets/img/icon/favicon.ico" />
     <script
       data-ad-client="ca-pub-8390872078103831"
       async
@@ -74,6 +75,17 @@
     </div>
 
     <div class="hero-section">
+      <!-- loading -->
+      <div id="loading">
+        <center>
+          <img
+            src="https://cutewallpaper.org/21/loading-gif-transparent-background/UCSUR-PittCSUR-University-of-Pittsburgh-Research-Center.gif"
+            alt=""
+          />
+        </center>
+      </div>
+      <!-- end loading -->
+
       <div id="first" class="row">
         <!-- First list -->
       </div>
