--- a/index.html
+++ b/index.html
@@ -58,61 +58,56 @@
       type="text/css"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div class="nav">
-      <ul>
-        <li>
-          <a href="/">Home</a>
-        </li>
-        <li>
-          <img class="logo" src="assets/img/logo/logo.png" alt="" />
-        </li>
-        <li>
-          <a href="https://evoush.com">Go To Web Page</a>
-        </li>
-      </ul>
+    <!-- loading -->
+    <div id="loading">
+      <center>
+        <img
+          src="https://cutewallpaper.org/21/loading-gif-transparent-background/UCSUR-PittCSUR-University-of-Pittsburgh-Research-Center.gif"
+          class="img-fluid mt-5 loading-img"
+          alt=""
+        />
+      </center>
     </div>
+    <!-- end loading -->
 
     <div class="hero-section">
-      <!-- loading -->
-      <div id="loading">
-        <center>
-          <img
-            src="https://cutewallpaper.org/21/loading-gif-transparent-background/UCSUR-PittCSUR-University-of-Pittsburgh-Research-Center.gif"
-            alt=""
-          />
-        </center>
-      </div>
-      <!-- end loading -->
-
-      <div id="first" class="row">
-        <!-- First list -->
+      <div class="row justfiy-content-start">
+        <div id="first">
+          <!-- First list -->
+        </div>
       </div>
 
-      <div id="second" class="row">
-        <!-- Second list -->
+      <div class="row justfiy-content-start">
+        <div id="second">
+          <!-- Second list -->
+        </div>
       </div>
 
-      <div id="third" class="row">
-        <!-- Third list -->
+      <div class="row justfiy-content-start">
+        <div id="third">
+          <!-- Third list -->
+        </div>
       </div>
     </div>
-
-    <!-- <div class="contact">
-      <fieldset>
-        <legend>Contact</legend>
-      </fieldset>
-    </div> -->
-
-    <div class="spacer"></div>
 
     <div class="footer">
       <p>Contact me on evoushofficiall@gmail.com</p>
     </div>
 
-    <!-- jQuery library -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+
     <script type="text/javascript" src="assets/js/functions.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
