--- a/index.html
+++ b/index.html
@@ -71,38 +71,38 @@
       <center>
         <img
           src="https://cutewallpaper.org/21/loading-gif-transparent-background/UCSUR-PittCSUR-University-of-Pittsburgh-Research-Center.gif"
-          class="img-fluid mt-5 loading-img"
+          class="img-fluid loading-img"
           alt=""
         />
       </center>
     </div>
     <!-- end loading -->
-
     <div class="hero-section">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">
-            <a href="/">Home</a>
-          </li>
-          <li class="breadcrumb-item">
-            <a href="https://evoush.com">evoush.com</a>
-          </li>
-        </ol>
-      </nav>
-      <div class="row justfiy-content-start">
-        <div id="first">
+      <div class="container">
+        <div class="row justify-content-center">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">
+                <a href="/">Home</a>
+              </li>
+              <li class="breadcrumb-item">
+                <a href="https://evoush.com">evoush.com</a>
+              </li>
+            </ol>
+          </nav>
+        </div>
+      </div>
+
+      <div class="container">
+        <div id="first" class="row">
           <!-- First list -->
         </div>
-      </div>
 
-      <div class="row justfiy-content-start">
-        <div id="second">
+        <div id="second" class="row">
           <!-- Second list -->
         </div>
-      </div>
 
-      <div class="row justfiy-content-start">
-        <div id="third">
+        <div id="third" class="row">
           <!-- Third list -->
         </div>
       </div>
