--- a/index.html
+++ b/index.html
@@ -77,9 +77,15 @@
       </nav>
       <div class="hero-area">
         <div class="hero-text">
-          <h1>Evoush Official</h1>
-          <p>Starter Runing Page</p>
+          <h1>Evoush</h1>
+          <p>Your Eternal Future</p>
           <div class="button"><a href="https://evoush.com">About us</a></div>
+        </div>
+        <div class="brand-product">
+          <img
+            src="https://evoush-landing-api.herokuapp.com/images/products/klev/klevv.png"
+            alt=""
+          />
         </div>
         <div class="socials">
           <div>
@@ -133,12 +139,20 @@
     <section class="sub-section" id="about-me">
       <div class="information">
         <h2>About Us</h2>
-        <p></p>
+        <p>
+          Dengan bangga kami PT. Pineleng Indah Cemerlang membawakan merk dagang
+          kebanggan kami yang kami sebut
+          <strong>evoush</strong>. Sama seperti pepatah terkenal sebuah nama
+          adalah sebuah cerita, tentunya cerita yang akan membawa anda menjadi
+          sejarah yang tak terlupakan sebagai pebisnis yang gilang gemilang,
+          tentunya bersama kami dengan membawa brand yang akan melambungkan jiwa
+          berbisnis untuk meraih mimpi-mimpi anda.
+        </p>
       </div>
       <div class="headshot-container">
         <img
           class="headshot"
-          src="src/images/headshot.jpg"
+          src="assets/img/logo/logo.png"
           alt="Evoush Official"
         />
       </div>
